# ultraimport

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  readme.md  setup.cfg  setup.py  ultraimport.py
.github/workflows/: ci.yml
docs/: advanced-usage.md  better-error-messages.md  gen.sh  readme.md  ultraimport.md
docs/lazydocs/: README.md  ultraimport.md
example/broken/myprogram/: run.py
example/working/myprogram/: cache.py  run.py
example/working/stackoverflow-63145047/package/package/: main.py
example/working/stackoverflow-63145047/package/package/b/: __init__.py  b.py
examples/: README.md
examples/broken/myprogram/: cache.py  log.py  run.py
examples/cursed-for/: v3.py
examples/dependency-injection/: README.md  worker.py
examples/dynamic-namespace/: main.py  utils.py
examples/mypackage/: myothermodule.py  run.py
examples/mypackage/somepackage/: mymodule.py
examples/myprogram/: cache.py  logging.py  run.py
examples/preprocess-packed/: readme.md  run.py  tag.py
examples/quickstart/: readme.md
examples/quickstart/red/: cherry.py
examples/quickstart/run/: run.py
examples/quickstart/yellow/: lemon.py
examples/recurse/: inject_missing.py  run.py
examples/recurse/mypackage/: __init__.py  mymodule.py  other.py
examples/stackoverflow-11536764/pkg/tests/: core_test.py
examples/stackoverflow-63145047/package/package/a/: __init__.py
examples/stackoverflow-74632397/: README.md  main.py
examples/stackoverflow-74632397/autogenerated/: file1.py  file2.py
examples/typed-imports/: mylib.py  run.py
examples/working/cursed-for/: readme.md  run.py
examples/working/debug-transform/: README.md  debug.py  readme.md  run.py
examples/working/dependency-injection/: README.md  logger.py  run.py
examples/working/dynamic-namespace/: run.py
examples/working/dynamic-namespace/lib/: lib.py
examples/working/impossible-filename/: run.py
examples/working/mypackage/: run.py
examples/working/mypackage/somepackage/: __init__.py  xmodule.py
examples/working/mypackage/somepackage/subpackage/: siblingmodule.py  submodule.py
examples/working/myprogram/: cache.py  log.py  run.py  run.py.lprof
examples/working/quickstart/: cherry.py
examples/working/quickstart/red/: cherry.py  strawberry.py
examples/working/quickstart/run/: run.py
examples/working/quickstart/yellow/: banana.py
examples/working/recurse/mypackage/: log.py  logger.py  mymodule.py  other.py
examples/working/recurse/mypackage/log/: __init__.py
examples/working/stackoverflow-11536764/pkg/components/: core.py
examples/working/stackoverflow-63145047/package/package/a/: a.py
tests/: tests.py
