[build-system]

requires = ["setuptools", "setuptools-scm", "wheel", "cython"]

build-backend = 'setuptools.build_meta'

[project]
name = "ultraimport"
description='Get control over your imports -- no matter how you run your code.'
readme = "readme.md"
license-files = ["license.txt"]
version = "0.1.1"
dependencies= []
requires-python = '>=3.9'

[[authors]]
name = "Ronny Rentner"
email = "ultraimport.code@ronny-rentner.de"

[project.urls]
Homepage = "https://github.com/ronny-rentner/ultraimport"
Repository = "https://github.com/ronny-rentner/ultraimport"
Documentation = "https://github.com/ronny-rentner/ultraimport/tree/main/docs"

[tool.setuptools]
# FIXME: Does not work, the files are still included
include-package-data = false
packages = ["ultraimport"]
[tool.setuptools.package-dir]
ultraimport = "."
