[metadata]
name = ultraimport
author = Ronny Rentner
author_email = ultraimport@ronny-rentner.de
license = MIT
license_files = LICENSE
url = https://github.com/ronny-rentner/ultraimport
description = Stable Python Imports
long_description = file: README.md

[options]
zip_safe = False
packages = .
include_package_data = False
python_requires = >=3.7
setup_requires = 
install_requires = 

